# fcache

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  rustfmt.toml
.cargo/: README.md
.github/workflows/: rust.yml
examples/: README.md  cache_refresh.rs  command_file.rs  dir_cache.rs  file_locking.rs  file_refresh.rs  force_refresh.rs  lazy_file.rs  temp_cache.rs
src/: callback.rs  file.rs  lib.rs  prelude.rs  result.rs
tests/: core.rs  files.rs  locking.rs  refresh.rs
tests/common/: mod.rs  test_content.txt  test_large_content.txt
